Updated styling and components
-add new todo
-toggle add new todo form

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,5 @@
-.App {
-  text-align: center;
-}
 
-#container {
+.container {
   display:flex;
   flex-direction: column;
   justify-content: center;
@@ -10,17 +7,51 @@
   margin-left:auto;
   margin-right:auto;
   margin-top: 10px;
-  border: 2px solid black;
+  padding: 0 1em 0 1em;
+  background-color: rgb(208, 212, 208);
 }
 
-#Header {
-  display: inline-flex;
+.Header {
+  display: flex;
+  flex-direction: row;
+  justify-content:space-between;
+  align-items: center;
+}
+
+.Header h1 {
   margin-left: 10px;
-  border: 2px solid red;
 }
 
-#todoList {
+.btn {
+  width:60px;
+  height: 30px;
+  background-color: rgb(29, 182, 24);
+  border: none;
+  border-radius: 5px;
+  color: white;
+}
+
+.btn:hover {
+  background-color: rgb(1, 10, 1);
+}
+
+.btnDelete {
+  background-color: red;
+  border: none;
+  border-radius: 50%;
+  text-align: center;
+  font-size:small;
+}
+
+.todoList {
+  border: 2px sandybrown;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  width: max-content;
+}
+
+.todo{
+  line-height: 3px;
+  background-color: azure;
 }
